--- a/package.json
+++ b/package.json
@@ -18,9 +18,14 @@
   "homepage": "https://github.com/wrhodges1986/finalProject",
   "dependencies": {
     "aws-lib": "^0.3.0",
+    "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.9.1",
+    "cookie-parser": "^1.3.3",
     "express": "^4.10.0",
+    "express-session": "^1.9.1",
     "fs": "0.0.2",
-    "mongoose": "^3.8.18"
+    "mongoose": "^3.8.18",
+    "passport": "^0.2.1",
+    "passport-local": "^1.0.0"
   }
 }
